O'zgartirishlar haqida qisqa tavsif

--- a/templates/question-create.html
+++ b/templates/question-create.html
@@ -1,3 +1,4 @@
+
 {% extends 'base.html' %}
 {% block content %}
 <div class="main-content" style="min-height: 608px;">
@@ -11,31 +12,29 @@
               </div>
               <form method="post">
                 {% csrf_token %}
-              <div class="card-body">
-                <div class="form-group">
-                  <label>Nom</label>
-                    <input type="text" class="form-control" name="name">
-                </div>
-                <div class="container mt-4">
-                    <div id="input-container">
-                        <div class="input-group mb-2">
-                            <input type="text" class="form-control phone-number" placeholder="Enter phone number">
-                            <div class="input-group-prepend">
-                                <div class="input-group-text bg-primary text-light add-button" style="cursor: pointer;">
-                                    <i class="fas fa-plus"></i>
-                                </div>
-                                <div class="input-group-text bg-danger text-light ml-1 remove-button" style="cursor: pointer;">
-                                    <i class="fas fa-trash"></i>
+                  <div class="card-body">
+                    <div class="form-group">
+                      <label>Savol matni</label>
+                        <textarea type="text" class="form-control" name="name"> </textarea>
+                    </div>
+                    <div class="container mt-4">
+                        <div id="input-container">
+                            <div class="input-group mb-2">
+
+                                <input name="true" type="text" class="form-control" placeholder="To'g'ri javobni kiriting">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text bg-primary text-light add-button" style="cursor: pointer;">
+                                        <i class="fas fa-plus"></i>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
                 
                 <br>
-                <button type="submit" class="btn btn-primary">Yaratish</button>
-              </form>
+                <button type="submit" class="btn btn-primary ms-2">Yaratish</button>
               </div>
+              </form>
             </div>
           </div>
         </div>
@@ -137,7 +136,7 @@
       var newInputGroup = document.createElement('div');
       newInputGroup.className = 'input-group mb-2';
       newInputGroup.innerHTML = `
-          <input type="text" class="form-control phone-number" placeholder="Enter phone number">
+          <input type="text" class="form-control phone-number" placeholder="Noto'g'ri javob kiriting">
           <div class="input-group-prepend">
               <div class="input-group-text bg-primary text-light" style="cursor: pointer;">
                   <i class="fas fa-plus"></i>
@@ -168,7 +167,7 @@
       var newInputGroup = document.createElement('div');
       newInputGroup.className = 'input-group mb-2';
       newInputGroup.innerHTML = `
-          <input type="text" class="form-control phone-number" placeholder="Enter phone number">
+          <input name="false-list" type="text" class="form-control phone-number" placeholder="Noto'g'ri javob kiriting">
           <div class="input-group-prepend">
               <div class="input-group-text bg-primary text-light add-button" style="cursor: pointer;">
                   <i class="fas fa-plus"></i>
