--- a/templates/question-detail.html
+++ b/templates/question-detail.html
@@ -1,103 +1,135 @@
+
 {% extends 'base.html' %}
 {% block content %}
-<div class="main-content full-width-content" style="min-height: 608px;">
+<div class="main-content" style="min-height: 608px;">
     <section class="section">
       <div class="section-body">
         <div class="row">
           <div class="col-12">
             <div class="card">
               <div class="card-header">
-                <h4>Savollar to'plamini yaratish</h4>
+                <h4>Savol haqida</h4>
               </div>
-              <form method="post">
-                {% csrf_token %}
-                <div class="card-body">
-                  <div class="form-group">
-                    <label for="question-name">Savol nomi</label>
-                      <input type="text" class="form-control" name="question_name" id="question-name" placeholder="Savolni kiriting">
-                  </div>
 
-                  <!-- Variantlarni qo'shish -->
-                  <div class="container mt-4">
-                      <div id="option-container">
-                          <div class="input-group mb-2 option-group">
-                              <input type="text" name="option_name" class="form-control" placeholder="Variant nomini kiriting">
-                              <input type="checkbox" name="correct_option" class="form-check-input ms-2" title="To'g'ri variantmi?">
-                              <div class="input-group-prepend">
-                                  <div class="input-group-text bg-primary text-light add-option" style="cursor: pointer;">
-                                      <i class="fas fa-plus"></i>
-                                  </div>
-                                  <div class="input-group-text bg-danger text-light ms-1 remove-option" style="cursor: pointer;">
-                                      <i class="fas fa-trash"></i>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
+                  <div class="card-body">
+                    <div class="form-group">
+                      <label>Savol matni</label>
+                        <textarea readonly type="text" class="form-control" name="name">{{ question.name }}</textarea>
+                    </div>
+                      {% for option in question.options %}
+                    <div class="container mt-4">
+                        <div id="input-container">
+                            <div class="input-group mb-2">
 
-                  <br>
-                  <button type="submit" class="btn btn-primary">Yaratish</button>
-                </div>
-              </form>
+                                <input readonly style="{% if option.correct %}background-color:green; color:#FFFFFF{% endif %}" name="true" type="text" class="form-control " value="{{ option.name }}">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text text-light add-button" style="cursor: pointer;">
+                                      <a class="btn btn-danger" href="{% url 'optionDelete' question.id option.id %}">O'chirish</a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                        {% endfor %}
+                <br>
+
+              </div>
+
             </div>
           </div>
         </div>
       </div>
     </section>
-</div>
-{% endblock %}
-
-{% block css %}
-<style>
-  .full-width-content {
-    width: 100vw;
-    margin-left: calc(-50vw + 50%);
-    background-color: #f8f9fa;--
-  }
-</style>
-{% endblock %}
-
-{% block js %}
-<script>
-  // Variant qo'shish funksiyasi
-  function addOption() {
-      var newOptionGroup = document.createElement('div');
-      newOptionGroup.className = 'input-group mb-2 option-group';
-      newOptionGroup.innerHTML = `
-          <input type="text" name="option_name" class="form-control" placeholder="Variant nomini kiriting">
-          <input type="checkbox" name="correct_option" class="form-check-input ms-2" title="To'g'ri variantmi?">
-          <div class="input-group-prepend">
-              <div class="input-group-text bg-primary text-light add-option" style="cursor: pointer;">
-                  <i class="fas fa-plus"></i>
-              </div>
-              <div class="input-group-text bg-danger text-light ms-1 remove-option" style="cursor: pointer;">
-                  <i class="fas fa-trash"></i>
-              </div>
+    <div class="settingSidebar">
+      <a href="javascript:void(0)" class="settingPanelToggle"> <i class="fa fa-spin fa-cog"></i>
+      </a>
+      <div class="settingSidebar-body ps-container ps-theme-default" tabindex="2" style="overflow: hidden; outline: none;">
+        <div class=" fade show active">
+          <div class="setting-panel-header">Setting Panel
           </div>
-      `;
-      document.getElementById('option-container').appendChild(newOptionGroup);
-      addEventListenersToButtons();
-  }
+          <div class="p-15 border-bottom">
+            <h6 class="font-medium m-b-10">Select Layout</h6>
+            <div class="selectgroup layout-color w-50">
+              <label class="selectgroup-item">
+                <input type="radio" name="value" value="1" class="selectgroup-input-radio select-layout" checked="">
+                <span class="selectgroup-button">Light</span>
+              </label>
+              <label class="selectgroup-item">
+                <input type="radio" name="value" value="2" class="selectgroup-input-radio select-layout">
+                <span class="selectgroup-button">Dark</span>
+              </label>
+            </div>
+          </div>
+          <div class="p-15 border-bottom">
+            <h6 class="font-medium m-b-10">Sidebar Color</h6>
+            <div class="selectgroup selectgroup-pills sidebar-color">
+              <label class="selectgroup-item">
+                <input type="radio" name="icon-input" value="1" class="selectgroup-input select-sidebar">
+                <span class="selectgroup-button selectgroup-button-icon" data-toggle="tooltip" data-original-title="Light Sidebar"><i class="fas fa-sun"></i></span>
+              </label>
+              <label class="selectgroup-item">
+                <input type="radio" name="icon-input" value="2" class="selectgroup-input select-sidebar" checked="">
+                <span class="selectgroup-button selectgroup-button-icon" data-toggle="tooltip" data-original-title="Dark Sidebar"><i class="fas fa-moon"></i></span>
+              </label>
+            </div>
+          </div>
+          <div class="p-15 border-bottom">
+            <h6 class="font-medium m-b-10">Color Theme</h6>
+            <div class="theme-setting-options">
+              <ul class="choose-theme list-unstyled mb-0">
+                <li title="white" class="active">
+                  <div class="white"></div>
+                </li>
+                <li title="cyan">
+                  <div class="cyan"></div>
+                </li>
+                <li title="black">
+                  <div class="black"></div>
+                </li>
+                <li title="purple">
+                  <div class="purple"></div>
+                </li>
+                <li title="orange">
+                  <div class="orange"></div>
+                </li>
+                <li title="green">
+                  <div class="green"></div>
+                </li>
+                <li title="red">
+                  <div class="red"></div>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="p-15 border-bottom">
+            <div class="theme-setting-options">
+              <label class="m-b-0">
+                <input type="checkbox" name="custom-switch-checkbox" class="custom-switch-input" id="mini_sidebar_setting">
+                <span class="custom-switch-indicator"></span>
+                <span class="control-label p-l-10">Mini Sidebar</span>
+              </label>
+            </div>
+          </div>
+          <div class="p-15 border-bottom">
+            <div class="theme-setting-options">
+              <label class="m-b-0">
+                <input type="checkbox" name="custom-switch-checkbox" class="custom-switch-input" id="sticky_header_setting">
+                <span class="custom-switch-indicator"></span>
+                <span class="control-label p-l-10">Sticky Header</span>
+              </label>
+            </div>
+          </div>
+          <div class="mt-4 mb-4 p-3 align-center rt-sidebar-last-ele">
+            <a href="#" class="btn btn-icon icon-left btn-primary btn-restore-theme">
+              <i class="fas fa-undo"></i> Restore Default
+            </a>
+          </div>
+        </div>
+      </div>
+    <div id="ascrail2001" class="nicescroll-rails nicescroll-rails-vr" style="width: 8px; z-index: 999; cursor: default; position: absolute; top: 0px; left: 272px; height: 703px; display: none;"><div class="nicescroll-cursors" style="position: relative; top: 0px; float: right; width: 6px; height: 0px; background-color: rgb(66, 66, 66); border: 1px solid rgb(255, 255, 255); background-clip: padding-box; border-radius: 5px;"></div></div><div id="ascrail2001-hr" class="nicescroll-rails nicescroll-rails-hr" style="height: 8px; z-index: 999; top: 695px; left: 0px; position: absolute; cursor: default; display: none;"><div class="nicescroll-cursors" style="position: absolute; top: 0px; height: 6px; width: 0px; background-color: rgb(66, 66, 66); border: 1px solid rgb(255, 255, 255); background-clip: padding-box; border-radius: 5px;"></div></div></div>
+  </div>
+{% endblock %}
+{% block js %}
 
-  // Variant olib tashlash funksiyasi
-  function removeOption(event) {
-      event.target.closest('.option-group').remove();
-  }
-
-  // Tugmalar uchun boshlang'ich event listenerlar
-  function addEventListenersToButtons() {
-      document.querySelectorAll('.add-option').forEach(function(button) {
-          button.removeEventListener('click', addOption);
-          button.addEventListener('click', addOption);
-      });
-
-      document.querySelectorAll('.remove-option').forEach(function(button) {
-          button.removeEventListener('click', removeOption);
-          button.addEventListener('click', removeOption);
-      });
-  }
-
-  // Boshlang'ich chaqiruv
-  addEventListenersToButtons();
-</script>
 {% endblock %}
